Updated first steps notebook (9)

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -32,7 +32,7 @@
    "id": "d15075fa-8c9d-4e60-82d9-28d92d38ee0e",
    "metadata": {},
    "source": [
-    "## 2. Activate JupySQL\n",
+    "## 2. Using JupySQL\n",
     "\n",
     "First we will activate the [JupySQL](https://jupysql.ploomber.io) magics:"
    ]
@@ -52,7 +52,9 @@
    "id": "342a7800-253d-43a0-9bd7-89932876317d",
    "metadata": {},
    "source": [
-    "### 2.1 Create a Database Table\n",
+    "In the background JupySQL uses SQLAlchemy, see also the [demo section on SQLAlchemy](#4.-SQLAlchemy) below.\n",
+    "\n",
+    "### 2.1 Create Database Tables\n",
     "\n",
     "We will use JupySQL to create 2 database tables but other sections will use the tables, too:"
    ]
@@ -68,7 +70,7 @@
     "CREATE OR REPLACE TABLE US_AIRLINES (\n",
     "        OP_CARRIER_AIRLINE_ID DECIMAL(10, 0) IDENTITY PRIMARY KEY,\n",
     "        CARRIER_NAME VARCHAR(1000)\n",
-    ");"
+    ")"
    ]
   },
   {
@@ -80,28 +82,28 @@
    "source": [
     "%%sql\n",
     "CREATE OR REPLACE TABLE US_FLIGHTS (\n",
-    "        FL_DATE DATE,\n",
-    "        OP_CARRIER_AIRLINE_ID DECIMAL(10, 0),\n",
-    "        ORIGIN_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
-    "        ORIGIN_STATE_ABR CHAR(2),\n",
-    "        DEST_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
-    "        DEST_STATE_ABR CHAR(2),\n",
-    "        CRS_DEP_TIME CHAR(4),\n",
-    "        DEP_DELAY DECIMAL(6, 2),\n",
-    "        CRS_ARR_TIME CHAR(4),\n",
-    "        ARR_DELAY DECIMAL(6, 2),\n",
-    "        CANCELLED BOOLEAN,\n",
-    "        CANCELLATION_CODE CHAR(1),\n",
-    "        DIVERTED BOOLEAN,\n",
-    "        CRS_ELAPSED_TIME DECIMAL(6, 2),\n",
-    "        ACTUAL_ELAPSED_TIME DECIMAL(6, 2),\n",
-    "        DISTANCE DECIMAL(6, 2),\n",
-    "        CARRIER_DELAY DECIMAL(6, 2),\n",
-    "        WEATHER_DELAY DECIMAL(6, 2),\n",
-    "        NAS_DELAY DECIMAL(6, 2),\n",
-    "        SECURITY_DELAY DECIMAL(6, 2),\n",
-    "        LATE_AIRCRAFT_DELAY DECIMAL(6, 2)\n",
-    ");"
+    "  FL_DATE TIMESTAMP, -- was DATE\n",
+    "  OP_CARRIER_AIRLINE_ID DECIMAL(10, 0),\n",
+    "  ORIGIN_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
+    "  ORIGIN_STATE_ABR CHAR(2),\n",
+    "  DEST_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
+    "  DEST_STATE_ABR CHAR(2),\n",
+    "  CRS_DEP_TIME CHAR(4),\n",
+    "  DEP_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
+    "  CRS_ARR_TIME CHAR(4),\n",
+    "  ARR_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
+    "  CANCELLED BOOLEAN,\n",
+    "  CANCELLATION_CODE CHAR(1),\n",
+    "  DIVERTED BOOLEAN,\n",
+    "  CRS_ELAPSED_TIME DOUBLE, -- was DECIMAL(6,2)\n",
+    "  ACTUAL_ELAPSED_TIME DOUBLE, -- was DECIMAL(6,2)\n",
+    "  DISTANCE DOUBLE, -- was DECIMAL(6,2)\n",
+    "  CARRIER_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
+    "  WEATHER_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
+    "  NAS_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
+    "  SECURITY_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
+    "  LATE_AIRCRAFT_DELAY DOUBLE -- was DECIMAL(6,2)\n",
+    "  )"
    ]
   },
   {
@@ -130,7 +132,7 @@
     "  COLUMN SEPARATOR = ','\n",
     "  ROW SEPARATOR = 'CRLF'\n",
     "  COLUMN DELIMITER = '\"'\n",
-    "  SKIP = 1;"
+    "  SKIP = 1"
    ]
   },
   {
@@ -153,7 +155,7 @@
     "    FROM CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' \n",
     "    FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
     "    (1 FORMAT = 'MM/DD/YYYY HH12:MI:SS AM', 2..21)    \n",
-    "    SKIP = 1;"
+    "    SKIP = 1"
    ]
   },
   {
@@ -182,7 +184,7 @@
     "    JOIN US_AIRLINES A ON A.OP_CARRIER_AIRLINE_ID = F.OP_CARRIER_AIRLINE_ID\n",
     "    WHERE NOT (CANCELLED OR DIVERTED)\n",
     "    GROUP BY CARRIER_NAME\n",
-    "    ORDER BY \"Delay per flight\" DESC;"
+    "    ORDER BY \"Delay per flight\" DESC"
    ]
   },
   {
@@ -192,7 +194,7 @@
    "source": [
     "### 2.3 Importing a Parquet File From an AWS S3 Bucket\n",
     "\n",
-    "Exasol can import Parquet files from AWS S3 Buckets, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "Exasol since version 2025.1.3 can import Parquet files from AWS S3 Buckets, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "This demo uses a file already uploaded to S3 bucket `ai-lab-example-data-s3`.\n",
     "\n",
     "First we will define a connection pointing to the S3 bucket:"
@@ -207,7 +209,7 @@
    "source": [
     "%%sql\n",
     "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3\n",
-    "    TO 'https://ai-lab-example-data-s3.s3.eu-central-1.amazonaws.com';"
+    "    TO 'https://ai-lab-example-data-s3.s3.eu-central-1.amazonaws.com'"
    ]
   },
   {
@@ -215,7 +217,7 @@
    "id": "23507a42-9459-4446-af7f-7d4f65294242",
    "metadata": {},
    "source": [
-    "Alternatively the connection can also use the following URL syntax:"
+    "Alternatively the connection can also use the following URL syntax, see also \"_Load data from Parquet files_\" on [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm#Overview):"
    ]
   },
   {
@@ -226,7 +228,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 TO 's3://ai-lab-example-data-s3';"
+    "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 TO 's3://ai-lab-example-data-s3'"
    ]
   },
   {
@@ -245,7 +247,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "TRUNCATE TABLE US_FLIGHTS;"
+    "TRUNCATE TABLE US_FLIGHTS"
    ]
   },
   {
@@ -266,7 +268,7 @@
     "%%sql\n",
     "IMPORT INTO US_FLIGHTS\n",
     "    FROM PARQUET AT AI_LAB_FIRST_STEPS_S3\n",
-    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet';"
+    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'"
    ]
   },
   {
@@ -285,7 +287,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT * FROM US_FLIGHTS;"
+    "SELECT * FROM US_FLIGHTS"
    ]
   },
   {
@@ -294,6 +296,10 @@
    "metadata": {},
    "source": [
     "## 3. PyExasol\n",
+    "\n",
+    "Please note\n",
+    "* Accessing Exasol database versions `2025` and higher requires Pyexasol version ≥ `1.2`.\n",
+    "* AI Lab currently is shipped with pyexasol version `0.27.0`, the Pyexasol examples can only be executed with Exasol database versions < `2025`.\n",
     "\n",
     "### 3.1 Importing a CSV File From the Local Filesystem\n",
     "\n",
@@ -356,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "e84aae48-30f3-4e6b-ba1a-29644094d1ef",
    "metadata": {},
    "outputs": [],
@@ -396,7 +402,9 @@
    "id": "2324056a-65ad-4bfa-b044-d41154547d85",
    "metadata": {},
    "source": [
-    "Now let's run the import via pyexasol:"
+    "Now let's run the import via pyexasol:\n",
+    "\n",
+    "[TODO] use pyexasol formatter !r for schema "
    ]
   },
   {
@@ -418,13 +426,13 @@
    "id": "61b8024f-69c1-4247-ab5a-946d5e98fe2b",
    "metadata": {},
    "source": [
-    "## 4. SQL Alchemy\n",
+    "## 4. SQLAlchemy\n",
     "\n",
     "### 3.1 Importing a CSV File From the Local Filesystem\n",
     "\n",
-    "This section demonstrates how to import a CSV file from the local file system into the database using SQL Alchemy.\n",
+    "This section demonstrates how to import a CSV file from the local file system into the database using SQLAlchemy.\n",
     "\n",
-    "Function `open_sqlalchemy_connection()` returns a SQL Alchemy engine, again using the configuration from the SCS."
+    "Function `open_sqlalchemy_connection()` returns a SQLAlchemy engine, again using the configuration from the SCS."
    ]
   },
   {
@@ -445,7 +453,7 @@
    "source": [
     "### 3.2 Importing a CSV File From Remote\n",
     "\n",
-    "This section demonstrates how to import a CSV file from a remote source into the database using SQL Alchemy.\n",
+    "This section demonstrates how to import a CSV file from a remote source into the database using SQLAlchemy.\n",
     "\n",
     "First we will truncate table `US_FLIGHTS` again:"
    ]
@@ -466,7 +474,7 @@
    "id": "7d228759-c857-4b28-8b93-ca9baae3bc54",
    "metadata": {},
    "source": [
-    "Next we will import the flight data once again, now u"
+    "Next we will import the flight data once again, now using SQLAlchemy:"
    ]
   },
   {
@@ -481,6 +489,71 @@
     "with engine.connect() as conn:\n",
     "    result = conn.execute(import_remote_csv_sql)\n",
     "print(f\"Imported {result.rowcount} rows.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2228c1a-b6ce-432f-b869-ad18abf04b93",
+   "metadata": {},
+   "source": [
+    "### 3.3 Importing a Parquet File from an AWS S3 Bucket\n",
+    "\n",
+    "This section demonstrates how to import a CSV file from an AWS S3 Bucket into the database using SQLAlchemy.\n",
+    "\n",
+    "First we will truncate table `US_FLIGHTS` again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75a19429-89b7-4ed2-b401-e1c2563c2940",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "TRUNCATE TABLE US_FLIGHTS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d11dcb6d-d3e5-4e1e-8d61-ba59897c56e9",
+   "metadata": {},
+   "source": [
+    "Now we can import the Parquet file from S3 into the database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "651b41c6-3cd1-4311-a5f3-ababdc9a4273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ith engine.connect() as conn:\n",
+    "    result = conn.execute(import_remote_csv_sql)\n",
+    "print(f\"Imported {result.rowcount} rows.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35335a66-dace-4082-ba35-a3bcc1ed3d54",
+   "metadata": {},
+   "source": [
+    "### 3.4 SQLAlchemy Query Builders\n",
+    "\n",
+    "This section demonstrates how to use SQLAlchemy query builders for building and executing SQL queries.\n",
+    "\n",
+    "[TODO] Demo SQLALchemy Query builder for queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fae1fad-4811-4715-a4f5-c5d1c850efc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# query using SQLAlchemy query builder"
    ]
   },
   {
@@ -531,6 +604,7 @@
    "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_bucketfs_location\n",
+    "from pathlib import Path \n",
     "\n",
     "file = Path(\"first_steps/text_file.txt\")\n",
     "bfs = open_bucketfs_location(ai_lab_config)\n",
@@ -543,7 +617,7 @@
    "id": "82dc65f7-4d27-41b2-835a-100aa8b79d64",
    "metadata": {},
    "source": [
-    "### 5.2 Listing the Files in the BucketFS \n",
+    "### 5.2 Listing the Files in the BucketFS\n",
     "\n",
     "We can also list all the files currently available in the BucketFS:"
    ]
@@ -581,6 +655,16 @@
     "\n",
     "content = bfs.as_string(remote.read())\n",
     "print(f'The file in the BucketFS contains:\\n{content}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50b22225-34de-435b-b29d-6712e960b926",
+   "metadata": {},
+   "source": [
+    "### 5.4 Reading the File in the BucketFS Using a User Defined Function (UDF)\n",
+    "\n",
+    "[TODO]"
    ]
   }
  ],
