Updated first steps notebook (10)

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -18,10 +18,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "5970a003-896d-4f06-83ee-be98129c29d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e2fd32915d140c5818760c092d34951",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "080e93c3171e4b6b8d8bcb25aeb3f088",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui())"
@@ -39,10 +68,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "73122275-3f4a-4981-b8b3-ee6c49734996",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: An error happened while creating the connection: (exasol.driver.websocket._errors.Error) Connection failed, \n",
+      "(\n",
+      "    message     =>  Could not connect to Exasol: [Errno 111] Connection refused\n",
+      "    dsn         =>  172.17.0.3:8564\n",
+      "    user        =>  sys\n",
+      "    schema      =>  \n",
+      "    session_id  =>  \n",
+      ")\n",
+      "\n",
+      "(Background on this error at: https://sqlalche.me/e/14/dbapi).\n",
+      "\n",
+      "Perhaps you meant to use the existing connection: %sql 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'?Otherwise, try the following:\n",
+      "\n",
+      "Pass a valid connection string:\n",
+      "    Example: %sql postgresql://username:password@hostname/dbname\n",
+      "\n",
+      "OR\n",
+      "\n",
+      "Pass a connection key (one of: 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE')\n",
+      "    Example: %sql 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'\n",
+      "\n",
+      "For more details, see: https://jupysql.ploomber.io/en/latest/connecting.html\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n",
+      "UsageError: An error happened while creating the connection: (exasol.driver.websocket._errors.Error) Connection failed, \n",
+      "(\n",
+      "    message     =>  Could not connect to Exasol: [Errno 111] Connection refused\n",
+      "    dsn         =>  172.17.0.3:8564\n",
+      "    user        =>  sys\n",
+      "    schema      =>  \n",
+      "    session_id  =>  \n",
+      ")\n",
+      "\n",
+      "(Background on this error at: https://sqlalche.me/e/14/dbapi).\n",
+      "\n",
+      "Perhaps you meant to use the existing connection: %sql 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'?Otherwise, try the following:\n",
+      "\n",
+      "Pass a valid connection string:\n",
+      "    Example: %sql postgresql://username:password@hostname/dbname\n",
+      "\n",
+      "OR\n",
+      "\n",
+      "Pass a connection key (one of: 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE')\n",
+      "    Example: %sql 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'\n",
+      "\n",
+      "For more details, see: https://jupysql.ploomber.io/en/latest/connecting.html\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
    "source": [
     "%run utils/jupysql_init.ipynb"
    ]
@@ -356,7 +446,11 @@
     "### 3.2 Importing a CSV File From Remote\n",
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using pyexasol.\n",
-    "    \n",
+    "\n",
+    "<span style=\"color: red\">\n",
+    "This section is obsolete - remove as soon as SQL formatting works\n",
+    "</span>\n",
+    "\n",
     "First we define an SQL statement for the remote import:"
    ]
   },
@@ -383,6 +477,8 @@
    "source": [
     "This SQL statement can be reused in other examples.\n",
     "\n",
+    "<span style=\"color: red\">End of obsolete Text.</span>\n",
+    "\n",
     "Then we will truncate table `US_FLIGHTS` to be able to import the flight data again:"
    ]
   },
@@ -402,9 +498,7 @@
    "id": "2324056a-65ad-4bfa-b044-d41154547d85",
    "metadata": {},
    "source": [
-    "Now let's run the import via pyexasol:\n",
-    "\n",
-    "[TODO] use pyexasol formatter !r for schema "
+    "Now let's run the import via pyexasol. This example uses a query with separate params and [pyexasol SQL formatting](https://exasol.github.io/pyexasol/master/user_guide/exploring_features/formatting_sql.html): "
    ]
   },
   {
@@ -416,9 +510,24 @@
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
+    "query = \"\"\"\n",
+    "    IMPORT INTO {flights_table!q} FROM CSV AT {url!s} FILE {file!s}\n",
+    "    (1 FORMAT = {date_format!s}, 2..21) \n",
+    "    SKIP = 1\n",
+    "\"\"\"\n",
+    "\n",
+    "params = {\n",
+    "    \"flights_table\": (ai_lab_config.db_schema, \"US_FLIGHTS\"),\n",
+    "    \"url\": \"https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/\",\n",
+    "    \"file\": \"US_FLIGHTS_FEB_2024-fixed-booleans.csv\",\n",
+    "    \"date_format\": \"MM/DD/YYYY HH12:MI:SS AM\",\n",
+    "}\n",
+    "\n",
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
-    "    result = conn.execute(import_remote_csv_sql)\n",
-    "    print(f\"Imported {result.rowcount()} rows.\")"
+    "    result = conn.execute(query, params)\n",
+    "\n",
+    "print(f\"Imported {result.rowcount()} rows.\")\n",
+    "import_remote_csv_sql = result.query"
    ]
   },
   {
@@ -428,11 +537,8 @@
    "source": [
     "## 4. SQLAlchemy\n",
     "\n",
-    "### 3.1 Importing a CSV File From the Local Filesystem\n",
-    "\n",
-    "This section demonstrates how to import a CSV file from the local file system into the database using SQLAlchemy.\n",
-    "\n",
-    "Function `open_sqlalchemy_connection()` returns a SQLAlchemy engine, again using the configuration from the SCS."
+    "Function `open_sqlalchemy_connection()` returns a SQLAlchemy engine, again using the configuration from the SCS.\n",
+    "This engine will be used by the examples based on SQLAlchemy."
    ]
   },
   {
@@ -451,7 +557,7 @@
    "id": "e9c7e497-cf0a-4158-b656-221a80086a90",
    "metadata": {},
    "source": [
-    "### 3.2 Importing a CSV File From Remote\n",
+    "### 3.1 Importing a CSV File From Remote\n",
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using SQLAlchemy.\n",
     "\n",
@@ -529,8 +635,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ith engine.connect() as conn:\n",
-    "    result = conn.execute(import_remote_csv_sql)\n",
+    "sql = \"\"\"\n",
+    "IMPORT INTO US_FLIGHTS\n",
+    "    FROM PARQUET AT AI_LAB_FIRST_STEPS_S3\n",
+    "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'\n",
+    "\"\"\"\n",
+    "\n",
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(sql)\n",
     "print(f\"Imported {result.rowcount} rows.\")"
    ]
   },
@@ -541,9 +653,7 @@
    "source": [
     "### 3.4 SQLAlchemy Query Builders\n",
     "\n",
-    "This section demonstrates how to use SQLAlchemy query builders for building and executing SQL queries.\n",
-    "\n",
-    "[TODO] Demo SQLALchemy Query builder for queries"
+    "This section demonstrates using SQLAlchemy features [text expression](https://docs.sqlalchemy.org/en/20/core/sqlelement.html#sqlalchemy.sql.expression.text) and [TextClause](https://docs.sqlalchemy.org/en/20/core/sqlelement.html#sqlalchemy.sql.expression.TextClause) to build a query, execute it and iterate the result set:"
    ]
   },
   {
@@ -553,7 +663,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# query using SQLAlchemy query builder"
+    "from sqlalchemy import text\n",
+    "from datetime import datetime\n",
+    "from sqlalchemy.types import DateTime, String\n",
+    "\n",
+    "t = (\n",
+    "    text(\n",
+    "        \"\"\"\n",
+    "        SELECT FL_DATE, CRS_DEP_TIME \n",
+    "        FROM US_FLIGHTS \n",
+    "        WHERE OP_CARRIER_AIRLINE_ID =:carrier_id\n",
+    "        AND ORIGIN_STATE_ABR=:origin\n",
+    "        AND DEST_STATE_ABR=:dest\n",
+    "        \"\"\"\n",
+    "    )\n",
+    "    .bindparams(carrier_id=20452, origin=\"TX\", dest=\"NJ\")\n",
+    "    .columns(FL_DATE=DateTime, CRS_DEP_TIME=String)\n",
+    ")\n",
+    "\n",
+    "with engine.connect() as conn:\n",
+    "    for dt, departure in conn.execute(t):\n",
+    "        print(datetime.fromisoformat(dt).date(), departure)"
    ]
   },
   {
