Updated first steps notebook (11)
Added remarks on version of Exasol required for importing Parquet data.

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -18,39 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "5970a003-896d-4f06-83ee-be98129c29d8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e2fd32915d140c5818760c092d34951",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "080e93c3171e4b6b8d8bcb25aeb3f088",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui())"
@@ -68,71 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "73122275-3f4a-4981-b8b3-ee6c49734996",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: An error happened while creating the connection: (exasol.driver.websocket._errors.Error) Connection failed, \n",
-      "(\n",
-      "    message     =>  Could not connect to Exasol: [Errno 111] Connection refused\n",
-      "    dsn         =>  172.17.0.3:8564\n",
-      "    user        =>  sys\n",
-      "    schema      =>  \n",
-      "    session_id  =>  \n",
-      ")\n",
-      "\n",
-      "(Background on this error at: https://sqlalche.me/e/14/dbapi).\n",
-      "\n",
-      "Perhaps you meant to use the existing connection: %sql 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'?Otherwise, try the following:\n",
-      "\n",
-      "Pass a valid connection string:\n",
-      "    Example: %sql postgresql://username:password@hostname/dbname\n",
-      "\n",
-      "OR\n",
-      "\n",
-      "Pass a connection key (one of: 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE')\n",
-      "    Example: %sql 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'\n",
-      "\n",
-      "For more details, see: https://jupysql.ploomber.io/en/latest/connecting.html\n",
-      "If you need help solving this issue, send us a message: https://ploomber.io/community\n",
-      "UsageError: An error happened while creating the connection: (exasol.driver.websocket._errors.Error) Connection failed, \n",
-      "(\n",
-      "    message     =>  Could not connect to Exasol: [Errno 111] Connection refused\n",
-      "    dsn         =>  172.17.0.3:8564\n",
-      "    user        =>  sys\n",
-      "    schema      =>  \n",
-      "    session_id  =>  \n",
-      ")\n",
-      "\n",
-      "(Background on this error at: https://sqlalche.me/e/14/dbapi).\n",
-      "\n",
-      "Perhaps you meant to use the existing connection: %sql 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'?Otherwise, try the following:\n",
-      "\n",
-      "Pass a valid connection string:\n",
-      "    Example: %sql postgresql://username:password@hostname/dbname\n",
-      "\n",
-      "OR\n",
-      "\n",
-      "Pass a connection key (one of: 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE')\n",
-      "    Example: %sql 'exa+websocket://sys:***@172.17.0.3:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'\n",
-      "\n",
-      "For more details, see: https://jupysql.ploomber.io/en/latest/connecting.html\n",
-      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run utils/jupysql_init.ipynb"
    ]
@@ -157,9 +67,10 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE OR REPLACE TABLE US_AIRLINES (\n",
-    "        OP_CARRIER_AIRLINE_ID DECIMAL(10, 0) IDENTITY PRIMARY KEY,\n",
-    "        CARRIER_NAME VARCHAR(1000)\n",
+    "CREATE\n",
+    "OR REPLACE TABLE US_AIRLINES (\n",
+    "  OP_CARRIER_AIRLINE_ID DECIMAL(10, 0) IDENTITY PRIMARY KEY,\n",
+    "  CARRIER_NAME VARCHAR(1000)\n",
     ")"
    ]
   },
@@ -171,7 +82,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE OR REPLACE TABLE US_FLIGHTS (\n",
+    "CREATE\n",
+    "OR REPLACE TABLE US_FLIGHTS (\n",
     "  FL_DATE TIMESTAMP, -- was DATE\n",
     "  OP_CARRIER_AIRLINE_ID DECIMAL(10, 0),\n",
     "  ORIGIN_AIRPORT_SEQ_ID DECIMAL(10, 0),\n",
@@ -193,7 +105,7 @@
     "  NAS_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
     "  SECURITY_DELAY DOUBLE, -- was DECIMAL(6,2)\n",
     "  LATE_AIRCRAFT_DELAY DOUBLE -- was DECIMAL(6,2)\n",
-    "  )"
+    ")"
    ]
   },
   {
@@ -216,13 +128,13 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "IMPORT INTO US_AIRLINES FROM \n",
-    "  CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/' \n",
-    "  FILE 'US_AIRLINES.csv'\n",
-    "  COLUMN SEPARATOR = ','\n",
-    "  ROW SEPARATOR = 'CRLF'\n",
-    "  COLUMN DELIMITER = '\"'\n",
-    "  SKIP = 1"
+    "IMPORT INTO US_AIRLINES FROM\n",
+    "    CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/flight-info/' \n",
+    "    FILE 'US_AIRLINES.csv' \n",
+    "    COLUMN SEPARATOR = ',' \n",
+    "    ROW SEPARATOR = 'CRLF'\n",
+    "    COLUMN DELIMITER = '\"' \n",
+    "    SKIP = 1"
    ]
   },
   {
@@ -265,16 +177,16 @@
    "source": [
     "%%sql --save udf_output\n",
     "SELECT\n",
-    "    CARRIER_NAME \"Airline\"\n",
-    "    , SUM(CARRIER_DELAY) \"Combined Delay\"\n",
-    "    , COUNT(CARRIER_DELAY) \"Delayed Flights\"\n",
-    "    , COUNT(F.OP_CARRIER_AIRLINE_ID) \"Total flights\"\n",
-    "    , ROUND(sum(CARRIER_DELAY) / COUNT(F.OP_CARRIER_AIRLINE_ID), 1) \"Delay per flight\"\n",
-    "    FROM US_FLIGHTS F\n",
-    "    JOIN US_AIRLINES A ON A.OP_CARRIER_AIRLINE_ID = F.OP_CARRIER_AIRLINE_ID\n",
-    "    WHERE NOT (CANCELLED OR DIVERTED)\n",
-    "    GROUP BY CARRIER_NAME\n",
-    "    ORDER BY \"Delay per flight\" DESC"
+    "  CARRIER_NAME \"Airline\",\n",
+    "  SUM(CARRIER_DELAY) \"Combined Delay\",\n",
+    "  COUNT(CARRIER_DELAY) \"Delayed Flights\",\n",
+    "  COUNT(F.OP_CARRIER_AIRLINE_ID) \"Total flights\",\n",
+    "  ROUND( SUM(CARRIER_DELAY) / COUNT(F.OP_CARRIER_AIRLINE_ID), 1 ) \"Delay per flight\"\n",
+    "FROM US_FLIGHTS F\n",
+    "  JOIN US_AIRLINES A ON A.OP_CARRIER_AIRLINE_ID = F.OP_CARRIER_AIRLINE_ID\n",
+    "WHERE NOT (CANCELLED OR DIVERTED)\n",
+    "GROUP BY CARRIER_NAME\n",
+    "ORDER BY \"Delay per flight\" DESC"
    ]
   },
   {
@@ -284,8 +196,9 @@
    "source": [
     "### 2.3 Importing a Parquet File From an AWS S3 Bucket\n",
     "\n",
-    "Exasol since version 2025.1.3 can import Parquet files from AWS S3 Buckets, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "This demo uses a file already uploaded to S3 bucket `ai-lab-example-data-s3`.\n",
+    "\n",
+    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025 or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "\n",
     "First we will define a connection pointing to the S3 bucket:"
    ]
@@ -298,8 +211,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3\n",
-    "    TO 'https://ai-lab-example-data-s3.s3.eu-central-1.amazonaws.com'"
+    "CREATE\n",
+    "OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 TO 'https://ai-lab-example-data-s3.s3.eu-central-1.amazonaws.com'"
    ]
   },
   {
@@ -318,7 +231,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "CREATE OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 TO 's3://ai-lab-example-data-s3'"
+    "CREATE\n",
+    "OR REPLACE CONNECTION AI_LAB_FIRST_STEPS_S3 TO 's3://ai-lab-example-data-s3'"
    ]
   },
   {
@@ -355,9 +269,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n",
-    "IMPORT INTO US_FLIGHTS\n",
-    "    FROM PARQUET AT AI_LAB_FIRST_STEPS_S3\n",
+    "%%sql \n",
+    "IMPORT INTO US_FLIGHTS FROM PARQUET AT AI_LAB_FIRST_STEPS_S3 \n",
     "    FILE 'first_steps/US_FLIGHTS_FEB_2024.parquet'"
    ]
   },
@@ -376,8 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sql\n",
-    "SELECT * FROM US_FLIGHTS"
+    "%%sql SELECT * FROM US_FLIGHTS"
    ]
   },
   {
@@ -447,38 +359,6 @@
     "\n",
     "This section demonstrates how to import a CSV file from a remote source into the database using pyexasol.\n",
     "\n",
-    "<span style=\"color: red\">\n",
-    "This section is obsolete - remove as soon as SQL formatting works\n",
-    "</span>\n",
-    "\n",
-    "First we define an SQL statement for the remote import:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e84aae48-30f3-4e6b-ba1a-29644094d1ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import_remote_csv_sql = f\"\"\"\n",
-    "    IMPORT INTO \"{ai_lab_config.db_schema}\".\"US_FLIGHTS\" FROM \n",
-    "    CSV AT 'https://dut5tonqye28.cloudfront.net/ai_lab/first_steps/' \n",
-    "    FILE 'US_FLIGHTS_FEB_2024-fixed-booleans.csv'\n",
-    "    (1 FORMAT = 'MM/DD/YYYY HH12:MI:SS AM', 2..21) \n",
-    "    SKIP = 1\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "feb5f12c-5465-4580-b2ff-87e71f28238c",
-   "metadata": {},
-   "source": [
-    "This SQL statement can be reused in other examples.\n",
-    "\n",
-    "<span style=\"color: red\">End of obsolete Text.</span>\n",
-    "\n",
     "Then we will truncate table `US_FLIGHTS` to be able to import the flight data again:"
    ]
   },
@@ -526,7 +406,24 @@
     "with open_pyexasol_connection(ai_lab_config, compression=True) as conn:\n",
     "    result = conn.execute(query, params)\n",
     "\n",
-    "print(f\"Imported {result.rowcount()} rows.\")\n",
+    "print(f\"Imported {result.rowcount()} rows.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "011de876-d82f-4c3b-8358-dc81c3faf601",
+   "metadata": {},
+   "source": [
+    "We will assign the formatted SQL query to a variable for reusing it later on:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f63d51d-e044-4dae-ac8e-c5f9274afa09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import_remote_csv_sql = result.query"
    ]
   },
@@ -605,6 +502,8 @@
     "### 3.3 Importing a Parquet File from an AWS S3 Bucket\n",
     "\n",
     "This section demonstrates how to import a CSV file from an AWS S3 Bucket into the database using SQLAlchemy.\n",
+    "\n",
+    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025 or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "\n",
     "First we will truncate table `US_FLIGHTS` again:"
    ]
