Added UDF example

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -665,35 +665,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "483ff5dd-cf57-4b51-aeff-26bf1d879a85",
+   "id": "50b22225-34de-435b-b29d-6712e960b926",
    "metadata": {},
    "source": [
-    "### 5.3 Reading a File in the BucketFS\n",
+    "### 5.3 Reading the File in the BucketFS Using a User Defined Function\n",
     "\n",
-    "We can also read the contents of a file in the BucketFS:"
+    "This sections demonstrates reading the contents of a file in the BucketFS using a [User Defined Function](https://docs.exasol.com/db/latest/database_concepts/udf_scripts.htm) (UDF). \n",
+    "\n",
+    "UDFs can be used in Exasol SQL statements and can also access objects in the BucketFS.\n",
+    "\n",
+    "First we will define the UDF:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec2d3b55-04d1-4fc1-a307-383a64eed012",
+   "id": "8dfc7b96-2be8-4bf9-9140-00a1097cec91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import exasol.bucketfs as bfs\n",
-    "\n",
-    "content = bfs.as_string(remote.read())\n",
-    "print(f'The file in the BucketFS contains:\\n{content}')"
+    "%%sql\n",
+    "--/\n",
+    "CREATE OR REPLACE PYTHON3 SCALAR SCRIPT \n",
+    "    bfs_file_content(\"path\" VARCHAR(256)) \n",
+    "    EMITS (\"FILE\" VARCHAR(256), CONTENT VARCHAR(2000000)) AS\n",
+    "from pathlib import Path \n",
+    "def run(ctx):  \n",
+    "    ctx.emit(ctx.path, Path(ctx.path).read_text())\n",
+    "/"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "50b22225-34de-435b-b29d-6712e960b926",
+   "id": "18cb2e3b-c019-4266-ae0e-4e9cbd5f3778",
    "metadata": {},
    "source": [
-    "### 5.4 Reading the File in the BucketFS Using a User Defined Function (UDF)\n",
-    "\n",
-    "[TODO]"
+    "And now, let's read the contents of the file in the BucketFS we just created before:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bfcdca7-ecc2-40a4-92be-d75dca1c3e42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "SELECT bfs_file_content('/buckets/bfsdefault/default/text_file.txt')"
    ]
   }
  ],
